@@ -1,7 +1,7 @@
 build:
 
 test:
-	checkbashisms Xsession.d/95unburden_home_dir
+	checkbashisms Xsession.d/95unburden-home-dir
 	perl -c bin/unburden-home-dir
 	prove t/*.t
 
@@ -10,7 +10,7 @@ install:
 	install -d $(DESTDIR)/usr/bin/
 	install -d $(DESTDIR)/usr/share/man/man1/
 	install -m 755 bin/unburden-home-dir $(DESTDIR)/usr/bin/
-	install -m 644 Xsession.d/95unburden_home_dir $(DESTDIR)/etc/X11/Xsession.d/
-	install -m 644 etc/unburden_home_dir etc/unburden_home_dir_list $(DESTDIR)/etc/
-	sed -e 's/^\([^#]\)/#\1/' -i $(DESTDIR)/etc/unburden_home_dir_list
+	install -m 644 Xsession.d/95unburden-home-dir $(DESTDIR)/etc/X11/Xsession.d/
+	install -m 644 etc/unburden-home-dir etc/unburden-home-dir.list $(DESTDIR)/etc/
+	sed -e 's/^\([^#]\)/#\1/' -i $(DESTDIR)/etc/unburden-home-dir.list
 	gzip -9c man/unburden-home-dir.1 > $(DESTDIR)/usr/share/man/man1/unburden-home-dir.1.gz
