@@ -1,0 +1,19 @@
+unburden-home-dir (0.0.20120305) unstable; urgency=low
+
+  All configuration files (and not just some) now use consistently the basename
+  "unburden-home-dir" instead of "unburden_home_dir":
+  
+  Changed:
+  
+    /etc/unburden_home_dir → /etc/unburden-home-dir
+    /etc/unburden_home_dir_list → /etc/unburden-home-dir.list
+    /etc/X11/Xsession.d/95unburden_home_dir → /etc/X11/Xsession.d/95unburden-home-dir
+  
+  Unchanged:
+  
+    /etc/default/unburden-home-dir
+  
+  dpkg should handle the renaming of the global conffiles gracefully, but
+  some user configuration files may need to be renamed
+
+ -- Axel Beckert <abe@debian.org>  Thu, 03 May 2012 17:44:54 +0200
