@@ -11,6 +11,7 @@ Vcs-Browser: http://git.phys.ethz.ch/?p=unburden-home-dir.git
 Package: unburden-home-dir
 Architecture: all
 Depends: x11-common, ${perl:Depends}, ${misc:Depends}, libconfig-file-perl, libfile-touch-perl, libfile-rsync-perl
+Pre-Depends: dpkg (>= 1.15.7.2)
 Enhances: x11-common
 Suggests: corekeeper, autotrash, tmpreaper, agedu, bleachbit, ncdu | baobab | filelight | xdiskusage | xdu
 Description: Remove or move cache files automatically from user's home
