@@ -1,2 +1,2 @@
-etc/unburden_home_dir
-etc/unburden_home_dir_list
+etc/unburden-home-dir
+etc/unburden-home-dir.list
