@@ -1,5 +1,7 @@
 unburden-home-dir (0.0.20120305) UNRELEASED; urgency=low
 
+  * Uses consistently the basename "unburden-home-dir" instead of
+    "unburden_home_dir".
   * Improve README
   * Add tmpreaper, agedu, bleachbit and some more comfortable "du"-like tools to
     "Suggests".
